--- a/Ausarbeitung/Proseminar.bib
+++ b/Ausarbeitung/Proseminar.bib
@@ -1,14 +1,15 @@
-@Article{FernuniSkript,
-  author   = {H-G. Unger, J. H. Hinken},
-  title    = {Theoretische Elektrotechnik: Elektromagnetische Wellen auf Leitungen},
-  subtitle = {Differentialgleichungen der Leitung und Lösung im eingeschwungenen Zustand},
+@Misc{FernuniSkript,
+  author       = {H-G. Unger, J. H. Hinken},
+  title        = {Theoretische Elektrotechnik: Elektromagnetische Wellen auf Leitungen},
+  howpublished = {FernUni Hagen Skript},
+  subtitle     = {Differentialgleichungen der Leitung und Lösung im eingeschwungenen Zustand},
 }
 
 @Misc{LeitungenUndFilter,
   author = {Werner Bächtold},
   title  = {Leitungen und Filter},
   note   = {Skript, abgerufen am 21.4.2025},
-  url    = {Online verfügbar unter \url{https://people.ee.ethz.ch/~martidi/L+F_Skript_10.pdf}},
+  url    = {https://people.ee.ethz.ch/~martidi/L+F_Skript_10.pdf},
 }
 
 @Misc{Kirchhoff,
@@ -28,7 +29,7 @@
 @Misc{MaxwellGleichungen,
   author = {Wikipedia},
   title  = {Maxwell-Gleichungen},
-  note   = {Webseite, zugegriffen am 125.2025},
+  note   = {Webseite, zugegriffen am 12.5.2025},
   url    = {https://de.wikipedia.org/w/index.php?title=Maxwell-Gleichungen&oldid=251440788},
 }
 
