--- a/graphics/ErsatzSchaltbild3/document.tex
+++ b/graphics/ErsatzSchaltbild3/document.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 
-\begin{circuitikz}
+\begin{circuitikz}[scale=0.75, transform shape]
 
 \tikzset{
 charge/.style={fill=orange!10, draw=orange, circle, radius=0.4},
