--- a/graphics/AbschlussMitWiderstand/document.tex
+++ b/graphics/AbschlussMitWiderstand/document.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 
-\begin{circuitikz}
+\begin{circuitikz}[scale=0.75, transform shape]
 
 \tikzset{
     fieldline/.style={postaction={decorate}, decoration={markings}},
