--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -156,7 +156,7 @@ z$, wie es auf Abbildung~\ref{Leitung1} dargestellt ist.
 \end{figure}
 
 Der Fluss $\Phi$ des magnetischen Feldes $\textbf{H}$ bewirkt eine Induktivität $\Delta L$
-\[ \Phi_{z} = i \cdot \Delta L, \] wobei $i$ der Strom ist.
+\[ \Phi_{\Delta z} = i \cdot \Delta L, \] wobei $i$ der Strom ist.
 Das elektrische Feld $\textbf{E}$ induziert Ladungen auf der Oberfläche des Leiters und damit eine Kapazität $\Delta C$,
 die über die Spannung $u$ wie folgt zusammenhängt:
 \[ \Delta Q = \Delta C \cdot u . \]
@@ -212,7 +212,7 @@ Mit der Leiterlänge $l$ definieren wir die verteilten Größen
 \begin{tabular}{r l r l}
     Widerstandsbelag & $R^{\prime} = \frac{R}{l}$, & Induktivitätsbelag & $L^{\prime} = \frac{L}{l}$, \\
 \addlinespace
-    Kapazitätsbelag & $C^{\prime} = \frac{C}{l}$, & und Leitungsbelag & $G^{\prime} = \frac{G}{l}$. \\
+    Kapazitätsbelag & $C^{\prime} = \frac{C}{l}$ & und Leitungsbelag & $G^{\prime} = \frac{G}{l}$. \\
 \end{tabular}
 
 Anteilig für ein Leiterelement der Länge $\Delta z$ definieren wir
@@ -221,7 +221,7 @@ Anteilig für ein Leiterelement der Länge $\Delta z$ definieren wir
     Leitungswiderstand & $\Delta R = R^{\prime} \Delta z$, &
     Leitungsinduktivität & $\Delta L = L^{\prime} \Delta z$, \\
 \addlinespace
-    Leitungskapazität & $\Delta C = C^{\prime} \Delta z$, &
+    Leitungskapazität & $\Delta C = C^{\prime} \Delta z$ &
     und Isolationsleitwert & $\Delta G = G^{\prime} \Delta z$. \\
 \end{tabular}
 
@@ -270,18 +270,18 @@ $C^{\prime}$ und Querleitwert $G^{\prime}$.
 Oftmals werden diese Gleichungen in die sogenannten Telegraphenleitungen weiter umgeformt. Dazu leiten wir beide
 Gleichungen einmal nach $z$ und einmal nach $t$ ab,
 \begin{align}
-    \frac{\partial^{2} u}{\partial z^2} &= -R^{\prime} \, \frac{\partial i}{\partial z} - L^{\prime} \,
-    \frac{\partial^2 i}{\partial t \,
-    \partial z} \label{eq:Dgl3} \\[1ex]
-    \frac{\partial^{2} i}{\partial z^2} &= -G^{\prime} \, \frac{\partial u}{\partial z} - C^{\prime} \,
-    \frac{\partial^2 u}{\partial t \,
-    \partial z} \label{eq:Dgl4} \\[1ex]
-    \frac{\partial^{2} u}{\partial z \, \partial t} &= -R^{\prime} \, \frac{\partial i}{\partial t} - L^{\prime} \,
-    \frac{\partial^2
-    i}{\partial t^{2}} \label{eq:Dgl5} \\[1ex]
-    \frac{\partial^{2} i}{\partial z \, \partial t} &= -G^{\prime} \, \frac{\partial u}{\partial t} - C^{\prime} \,
-    \frac{\partial^2
-    u}{\partial t^{2}}. \label{eq:Dgl6}
+    \frac{\partial^{2} u}{\partial z^2}
+    &= -R^{\prime} \, \frac{\partial i}{\partial z}
+       -L^{\prime} \, \frac{\partial^2 i}{\partial t \, \partial z} \label{eq:Dgl3} \\[1ex]
+    \frac{\partial^{2} i}{\partial z^2}
+    &= -G^{\prime} \, \frac{\partial u}{\partial z}
+       -C^{\prime} \, \frac{\partial^2 u}{\partial t \, \partial z} \label{eq:Dgl4} \\[1ex]
+    \frac{\partial^{2} u}{\partial z \, \partial t}
+    &= -R^{\prime} \, \frac{\partial i}{\partial t}
+       -L^{\prime} \, \frac{\partial^2 i}{\partial t^{2}} \label{eq:Dgl5} \\[1ex]
+    \frac{\partial^{2} i}{\partial z \, \partial t}
+    &= -G^{\prime} \, \frac{\partial u}{\partial t}
+       -C^{\prime} \, \frac{\partial^2 u}{\partial t^{2}}. \label{eq:Dgl6}
 \end{align}
 Wir setzen nun \eqref{eq:Dgl2} und \eqref{eq:Dgl6} in \eqref{eq:Dgl3} und \eqref{eq:Dgl1} und \eqref{eq:Dgl5} in
 \eqref{eq:Dgl4} ein und erhalten
@@ -335,12 +335,14 @@ rücklaufende Welle.
 
 \subsubsection{Wellengeschwindigkeit}
 
-Setzen wir die allgemeine Lösung $u_{h}(v t - z)$ in die Gleichungen \eqref{eq:Dgl7} und \eqref{eq:Dgl8} ein, so
-erhalten wir mit
+Sei \mbox{$w = w(z, t) = v t - z$}. Setzen wir die allgemeine Lösung \mbox{$u_{h}(v t - z) = u_{h}(w)$} in die
+Gleichungen \eqref{eq:Dgl7} und \eqref{eq:Dgl8} ein, so erhalten wir mit
 \begin{equation*}
-    \frac{\partial u_{h}}{\partial z} = \frac{\partial u_{h}}{\partial w} \frac{\partial w}{\partial z} = -1,
+    \frac{\partial u_{h}}{\partial z} = \frac{\partial u_{h}}{\partial w} \frac{\partial w}{\partial z} = -1
+    \frac{\partial u_{h}}{\partial w}
     \quad \text{und} \quad
     \frac{\partial u_{h}}{\partial t} = \frac{\partial u_{h}}{\partial w} \frac{\partial w}{\partial t} = v
+    \frac{\partial u_{h}}{\partial w}
 \end{equation*}
 die Gleichungen
 \begin{equation*}
@@ -354,13 +356,14 @@ und
     \right) = v \frac{\partial^{2} u_{h}}{\partial w^{2}} \frac{\partial w}{\partial t} =v^{2} \frac{\partial^{2}
         u_{h}}{\partial w^{2}}.
 \end{equation*}
-Es folgt somit
+Es folgt mit Gleichung~\eqref{eq:Tele1} und \mbox{$R^{\prime} = G^{\prime} = 0$}
 \begin{equation*}
     \frac{\partial^{2} u_{h}}{\partial z^{2}} = L^{\prime} \, C^{\prime} \, \frac{\partial^{2} u_{h}}{\partial t^{2}}
     \Leftrightarrow
     \frac{\partial^{2} u_{h}}{\partial w^{2}} = L^{\prime} \, C^{\prime} \, v^{2} \frac{\partial^{2} u_{h}}{\partial
     w^{2}}.
 \end{equation*}
+
 Nachdem wir die partielle Ableitung herauskürzen, erhalten wir also
 \begin{equation}
     v = \frac{1}{\sqrt{L^{\prime} \, C^{\prime}}} \label{eq:WellenGeschw1}.
@@ -372,53 +375,61 @@ Leitermaterial selbst!
 
 \subsubsection{Wellenwiderstand}
 
-Wir kommen nun zu einer weiteren wichtigen Größe, dem Wellenwiderstand.
-Setzen wir Gleichungen \eqref{eq:AllgEq1}, \eqref{eq:AllgEq2} und \eqref{eq:WellenGeschw1} in \eqref{eq:Dgl7} und
+Wir kommen nun zu einer weiteren wichtigen Größe, dem Wellenwiderstand. Sei hierzu \mbox{$w_{\pm} = v t \pm z$}.
+Setzen wir Gleichungen~\eqref{eq:AllgEq1}, \eqref{eq:AllgEq2} und \eqref{eq:WellenGeschw1} in \eqref{eq:Dgl7} und
 \eqref{eq:Dgl8} ein, so folgt
-\begin{align*}
-    \frac{\partial u}{\partial z} &= \frac{\partial u_{h}}{\partial w_{-}} \frac{\partial w_{-}}{\partial z}
-    + \frac{\partial u_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial z}
-    =
-    \frac{\partial u_{h}}{\partial w_{-}} \left(- \frac{1}{v} \right) + \frac{\partial u_{r}}{\partial w_{+}}
-    \frac{1}{v} \\[1ex]
-    \frac{\partial i}{\partial t} &= \frac{\partial i_{h}}{\partial w_{-}} - \frac{\partial i_{r}}{\partial w_{+}}
-\end{align*}
+\begin{alignat*}{2}
+    \frac{\partial u}{\partial z} &=
+    \frac{\partial u_{h}}{\partial w_{-}}
+    \underbrace{\frac{\partial w_{-}}{\partial z} }_{=-1}
+    +
+    \frac{\partial u_{r}}{\partial w_{+}}
+    \underbrace{\frac{\partial w_{+}}{\partial z} }_{=1}
+    & =
+    - \frac{\partial u_{h}}{\partial w_{-}} + \frac{\partial u_{r}}{\partial w_{+}} \\[1ex]
+    \frac{\partial i}{\partial t} &=
+    \frac{\partial i_{h}}{\partial w_{-}}
+    \underbrace{\frac{\partial w_{-}}{\partial t} }_{=v}
+    +
+    \frac{\partial i_{r}}{\partial w_{+}}
+    \underbrace{\frac{\partial w_{+}}{\partial t} }_{=v}
+    & =
+    v \left( \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}} \right)
+\end{alignat*}
 und
 \begin{align*}
-    \frac{\partial i}{\partial z} &= \frac{\partial i_{h}}{\partial w_{-}} \frac{\partial w_{-}}{\partial z}
-    + \frac{\partial i_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial z}
-    =
-    \frac{\partial i_{h}}{\partial w_{-}} \left(- \frac{1}{v} \right) - \frac{\partial i_{r}}{\partial w_{+}}
-    \frac{1}{v} \\[1ex]
-    \frac{\partial u}{\partial t} &= \frac{\partial u_{h}}{\partial w_{-}}
-    \underbrace{\frac{\partial w_{-}}{\partial t} }_{=1}
-    -
-    \frac{\partial u_{r}}{\partial w_{+}} \underbrace{\frac{\partial w_{+}}{\partial t} }_{=1}
+    \frac{\partial i}{\partial z} &=
+    - \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}} \\[1ex]
+    \frac{\partial u}{\partial t} &=
+    v \left( \frac{\partial u_{h}}{\partial w_{-}} + \frac{\partial u_{r}}{\partial w_{+}} \right).
 \end{align*}
-und somit
-\begin{alignat*}{3}
-    \frac{\partial u}{\partial z} &= \frac{1}{v} \left( \frac{\partial u_{r}}{\partial w_{+}} -
-    \frac{\partial u_{h}}{\partial w_{-}} \right) &= - L^{\prime} \left( \frac{\partial i_{h}}{\partial w_{-}} -
-    \frac{\partial i_{r}}{\partial w_{+}} \right) &= L^{\prime} \, \frac{\partial i}{\partial t} \\[1ex]
-    \frac{\partial i}{\partial z} &= - \frac{1}{v} \left( \frac{\partial i_{r}}{\partial w_{+}} +
-    \frac{\partial i_{h}}{\partial w_{-}} \right) &= - C^{\prime} \left( \frac{\partial u_{h}}{\partial w_{+}} +
-    \frac{\partial u_{r}}{\partial w_{-}} \right) &= C^{\prime} \, \frac{\partial u}{\partial t}.
+Mit Gleichungen~\eqref{eq:Dgl7} und \eqref{eq:Dgl8} gilt
+\begin{alignat*}{4}
+    \frac{\partial u}{\partial z} &= - L^{\prime} \, \frac{\partial i}{\partial t} & \Leftrightarrow &
+    - \frac{\partial u_{h}}{\partial w_{-}} + \frac{\partial u_{r}}{\partial w_{+}}
+    &=
+    - L^{\prime} v \left( \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}} \right) \\[1ex]
+    \frac{\partial i}{\partial z} &= - C^{\prime} \, \frac{\partial u}{\partial t} & \Leftrightarrow &
+    - \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}}
+    &=
+    - C^{\prime} v \left( \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}} \right).
 \end{alignat*}
 Da die Funktionen $u_{h}$ und $u_{r}$ bzw. $i_{h}$ und $i_{r}$ unabhängig sind, folgt
 \begin{equation*}
-    - \frac{1}{v} \, \frac{\text{d} u_{h}}{\text{d} w_{-}} = - L^{\prime} \, \frac{\text{d} i_{h}}{\text{d} w_{-}}.
+    - \frac{\text{d} u_{h}}{\text{d} w_{-}} = - L^{\prime} v \, \frac{\text{d} i_{h}}{\text{d} w_{-}}.
 \end{equation*}
 Integrieren beider Seiten liefert
 \begin{equation*}
-    u_{h}(w_{-}) = v \, L^{\prime} \, i_{h}(w_{-}) + c_{h} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{h}(w_{-}) +
-    c_{h},
+    u_{h}(w_{-}) = L^{\prime} v \, i_{h}(w_{-}) + c_{h} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{h}(w_{-}) +
+    c_{h}
 \end{equation*}
 und
 \begin{equation*}
-    u_{r}(w_{+}) = v \, L^{\prime} \, i_{r}(w_{+}) + c_{r} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{r}(w_{+}) +
+    u_{r}(w_{+}) = L^{\prime} v \, i_{r}(w_{+}) + c_{r} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{r}(w_{+}) +
     c_{r},
 \end{equation*}
-wobei $c_{h}$ und $c_{r}$ Konstanten sind. Setzen wir $c_{h} = c_{r} = 0$, dann erhalten wir
+wobei $c_{h}$ und $c_{r}$ Konstanten sind. Da Spannung und Strom proportional zueinander sind, setzen wir
+\mbox{$c_{h} = c_{r} = 0$}. Dann erhalten wir
 \begin{equation*}
     \frac{u_{h}(z, t)}{i_{h}(z, t)} = \frac{u_{r}(z, t)}{i_{r}(z, t)} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} = Z_{w}.
 \end{equation*}
@@ -594,7 +605,7 @@ Abbildung~\ref{ExpWelle} gezeigt.
     \begin{center}
         \input{../graphics/ExpWelle/document}
         \caption{Oben: Exponentieller Abfall der hinlaufenden Teilwelle $u_{h}$. Unten: Exponentieller Abfall der
-        rücklaufenden Teilwelle $u_{r}$. Die Spannung $u$ ist jeweils mit den Amplituden am Leiterende normiert.}
+        rücklaufenden Teilwelle $u_{r}$. Die Amplituden sind normiert.}
         \label{ExpWelle}
     \end{center}
 \end{figure}
@@ -689,7 +700,7 @@ Abbildung~\ref{ReflektierteWelle}.
 \begin{figure}[!htb]
     \begin{center}
         \input{../graphics/RelektierteWelle/document}
-        \caption{Reflexion der einfallenden Teilwelle $u_{h}$ am Leiterende $z=l$ mit normierter Amplitude.}
+        \caption{Reflexion der einfallenden Teilwelle $u_{h}$ am Leiterende $z=l$, mit normierter Amplitude.}
         \label{ReflektierteWelle}
     \end{center}
 \end{figure}
@@ -738,7 +749,7 @@ und Imaginärteil, was schematisch in Abbildung~\ref{ImaginaerWelle} zu sehen is
 \begin{figure}[ht]
     \begin{center}
         \input{../graphics/ImaginaerWelle/document}
-        \caption{Die Graphen der hinlaufende Teilwelle $u_{h}$ (blau) und der rücklaufenden $u_{r}$ (rot) beschreiben
+        \caption{Die Graphen der hinlaufenden Teilwelle $u_{h}$ (blau) und der rücklaufenden $u_{r}$ (rot) beschreiben
         Spiralen im Raum aufgrund des Dämpfungsterms.}
         \label{ImaginaerWelle}
     \end{center}
