--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -412,7 +412,7 @@ Mit Gleichungen~\eqref{eq:Dgl7} und \eqref{eq:Dgl8} gilt
     \frac{\partial i}{\partial z} &= - C^{\prime} \, \frac{\partial u}{\partial t} & \Leftrightarrow &
     - \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}}
     &=
-    - C^{\prime} v \left( \frac{\partial i_{h}}{\partial w_{-}} + \frac{\partial i_{r}}{\partial w_{+}} \right).
+    - C^{\prime} v \left( \frac{\partial u_{h}}{\partial w_{-}} + \frac{\partial u_{r}}{\partial w_{+}} \right).
 \end{alignat*}
 Da die Funktionen $u_{h}$ und $u_{r}$ bzw. $i_{h}$ und $i_{r}$ unabhängig sind, folgt
 \begin{equation*}
